--- a/src/Vehicle/vehicle.css
+++ b/src/Vehicle/vehicle.css
@@ -1,6 +1,6 @@
 .car
 {
- display-outline: block;
+ display: inline-block;
   margin: 1px ;
   border: 2px solid #00ffff;
   box-shadow: 0 2px 2px #ff8787;
